--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Electron
+name: WebView
 on: [push]
 jobs:
 
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.13
+    - name: Set up Go 1.14
       uses: actions/setup-go@v1
       with:
-        go-version: 1.13
+        go-version: 1.14
       id: go
 
     - name: Check out code into the Go module directory
@@ -18,8 +18,9 @@ jobs:
 
     - name: Download dependencies
       run: |
+        sudo apt-get update
+        sudo apt-get install libwebkit2gtk-4.0-dev
         make dep
-        make dep-linux
 
     - name: Build
       run: |
@@ -29,4 +30,4 @@ jobs:
     - name: Run Tests
       run: |
         export PATH=$PATH:$(go env GOPATH)/bin
-        make dep dep-linux test
+        make dep test
