--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,3 +67,35 @@ jobs:
     - name: Run Tests
       run: |
         make dep test
+  
+  buid-windows:
+    name: Build Windows
+    runs-on: windows-latest
+    steps:
+
+    - name: Set up Go 1.14
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1
+
+    - name: Download dependencies
+      run: |
+        make dep
+
+    - name: Build
+      run: |
+        make win
+
+    - name: Upload build result
+      uses: actions/upload-artifact@v1
+      with:
+        name: discord-bot-gui_win64.exe
+        path: bin/discord-bot-gui_win64.exe
+
+    - name: Run Tests
+      run: |
+        make dep test
