--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-discord-bot-gui*
-vendor/electron*
-vendor/status.json
-vendor/astilectron*
-ui/astilectron.zip
-ui/electron*.zip
+discord-bot-gui.syso
 bindata.go
 bin
